# ollama-npu-model-converter

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  known_good.md  plugin_dev.md  runtime_ort_genai_folder.md
sandbox_tmp/olive_cfg_smoke/work/: olive_phi_qnn_config.json
scripts/: publish_model.ps1
src/npu_model/adapters/: auto.py  base.py  generic.py  llama.py  phi3.py
src/npu_model/backends/: base.py  qnn.py
src/npu_model/calib/: data_reader.py  prompt_source.py  prompts_builtin.py
src/npu_model/cli/: common.py  doctor.py  main.py
src/npu_model/core/: cache.py  errors.py  fs.py  handoff.py  manifest.py  npu_invariant.py  pipeline.py  registry.py  shapes.py  tokenizer_bridge.py  tokenizer_norm.py  types.py
src/npu_model/exporters/: base.py  ort_genai_builder.py
src/npu_model/inspect/: hf_inspector.py
src/npu_model/olive/: __init__.py  artifacts.py  compat.py  config_builder.py  run_wrapper.py  runner.py
src/npu_model/olive/templates/: llama_qnn.json.j2  phi2_qnn.json.j2  phi_qnn.json.j2
src/npu_model/packagers/: ollama.py
src/npu_model/quant/: base.py  olive_qnn_llm.py  passthrough.py  qnn_qdq.py
src/npu_model/runtime_formats/: base.py  ort_genai_folder.py
src/npu_model/sources/: base.py  hf.py  local.py
src/npu_model/validate/: npu_strict.py
tests/: test_adapters.py  test_backend_qnn.py  test_cache.py  test_calib.py  test_doctor.py  test_explain.py  test_exporter.py  test_handoff.py  test_inspector.py  test_manifest.py  test_npu_strict.py  test_olive_compat.py  test_olive_config_builder.py  test_pack_ollama_ortgenai.py  test_pipeline.py  test_quant.py  test_registry.py  test_shapes.py  test_target_spec.py  test_tokenizer_norm.py  test_validate_genai_config.py
tests/fixtures/: hf_llama_config.json  hf_phi3_config.json
